dayjs implementation, secondbar working date calculations

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
     "react-world-flags": "^1.6.0"
   },
